<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/navigation_apps"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_apps" />
    <item
        android:id="@+id/navigation_schedules"
        android:icon="@android:drawable/ic_menu_month"
        android:title="@string/nav_schedules" />
    <item
        android:id="@+id/navigation_logs"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_logs" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
